aks/patches/opennms.minion.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minion
  namespace: opennms
spec:
  template:
    spec:
      containers:
      - name: minion
        resources:
          limits:
            memory: 2Gi
            cpu: 1
          requests:
            memory: 2Gi
          $patch: replace
