aks/patches/opennms.sentinel.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sentinel
  namespace: opennms
spec:
  template:
    spec:
      affinity:
        $patch: delete
      containers:
      - name: sentinel
        resources:
          limits:
            memory: 4Gi
            cpu: 2
          requests:
            memory: 2Gi
          $patch: replace
