aks/patches/external-access.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: opennms
spec:
  tls:
    - secretName: opennms-ingress-cert
      hosts:
        - onms.flows.cloud.opennms.com
        - grafana.flows.cloud.opennms.com
        - hasura.flows.cloud.opennms.com
        - kibana.flows.cloud.opennms.com
        - elastichq.flows.cloud.opennms.com
        - kafka-manager.flows.cloud.opennms.com
        - tracing.flows.cloud.opennms.com
  rules:
    - host: onms.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: opennms-core
              servicePort: 8980
    - host: grafana.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: grafana
              servicePort: 3000
    - host: hasura.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: hasura
              servicePort: 8080
    - host: kafka-manager.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kafka-manager
              servicePort: 9000
    - host: kibana.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
    - host: elastichq.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: elastichq
              servicePort: 5000
    - host: tracing.flows.cloud.opennms.com
      http:
        paths:
          - path: /
            backend:
              serviceName: onms-tracing-query
              servicePort: 16686
